--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -30,9 +30,9 @@ dock_5="Inspector,Node,History"
 open_scenes=PackedStringArray("res://RootScene.tscn", "res://Player.tscn", "res://Wall.tscn")
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
-current_scene="res://Player.tscn"
-selected_bottom_panel_item=0
+selected_main_editor_idx=2
+current_scene="res://RootScene.tscn"
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
