--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -27,17 +27,17 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://RootScene.tscn", "res://Player.tscn", "res://Wall.tscn", "res://Pickup.tscn", "res://tail_segment.tscn", "res://ui.tscn")
+open_scenes=PackedStringArray("res://RootScene.tscn", "res://Player.tscn", "res://Wall.tscn", "res://Pickup.tscn", "res://tail_segment.tscn", "res://ui.tscn", "res://point_spawner.tscn")
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-current_scene="res://RootScene.tscn"
+current_scene="res://point_spawner.tscn"
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Pickup.gd", "res://Player.gd", "res://SignalManager_Autoload.gd", "res://tail_segment.gd", "res://ui.gd"]
-selected_script="res://SignalManager_Autoload.gd"
+open_scripts=["res://Player.gd", "res://Pickup.gd", "res://PointSpawner.gd", "res://SignalManager_Autoload.gd", "res://tail_segment.gd", "res://ui.gd"]
+selected_script="res://PointSpawner.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
